// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersService getUserProfile should get user profile 1`] = `
{
  "avatar": undefined,
  "email": "test@email.com",
  "name": "Mock Name",
  "preferences": {
    "isProfileShared": true,
    "showDayStreak": true,
    "showWeeklyExcercise": undefined,
    "showWeeklyWater": undefined,
  },
  "shareLink": "mock_sharelink",
  "stats": {
    "dayStreak": 4,
    "weeklyExercise": 75,
    "weeklyWater": 6,
  },
}
`;

exports[`UsersService getUserProfile should get user profile 2`] = `
{
  "include": {
    "shareLink": {
      "select": {
        "isShared": true,
        "link": true,
      },
    },
  },
  "where": {
    "id": 1234,
  },
}
`;

exports[`UsersService getUserProfile should get user profile 3`] = `
{
  "where": {
    "AND": {
      "date": {
        "in": [
          "2023-04-22",
          "2023-04-23",
          "2023-04-24",
          "2023-04-25",
          "2023-04-26",
          "2023-04-27",
          "2023-04-28",
        ],
      },
    },
    "userId": 1234,
  },
}
`;

exports[`UsersService updateUser should update user 1`] = `
{
  "data": {
    "name": "Mock Name",
  },
  "where": {
    "id": 1234,
  },
}
`;

exports[`UsersService updateUserPreferences should update users preferences 1`] = `
{
  "data": {
    "userPreferenceShowDayStreak": true,
    "userPreferenceShowWeeklyExcercise": true,
    "userPreferenceShowWeeklyWater": true,
  },
  "where": {
    "id": 1234,
  },
}
`;

exports[`UsersService updateUserStreak should cater for an undefined statDayStreak value 1`] = `
{
  "data": {
    "statDayStreak": 1,
    "statLastActivity": 2023-04-28T00:00:00.000Z,
  },
  "where": {
    "id": 1234,
  },
}
`;

exports[`UsersService updateUserStreak should update a users streak if last activity date was yesterday 1`] = `
{
  "data": {
    "statDayStreak": 5,
    "statLastActivity": 2023-04-28T00:00:00.000Z,
  },
  "where": {
    "id": 1234,
  },
}
`;
